tests/ui/contracts/early-return-requires-ensures.stderr
error[E0308]: mismatched types
  --> $DIR/early-return-requires-ensures.rs:13:1
   |
LL | #[requires(return |_ret| { true }; true)]
   |                   ------ the expected closure
LL | #[ensures(|_ret| { false })]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected closure, found a different closure
   |
   = note: expected closure `{closure@$DIR/early-return-requires-ensures.rs:12:19: 12:25}`
              found closure `{closure@$DIR/early-return-requires-ensures.rs:13:11: 13:17}`
   = note: no two closures, even if identical, have the same type
   = help: consider boxing your closure and/or using it as a trait object
note: return type inferred to be `{closure@$DIR/early-return-requires-ensures.rs:12:19: 12:25}` here
  --> $DIR/early-return-requires-ensures.rs:12:19
   |
LL | #[requires(return |_ret| { true }; true)]
   |                   ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
